# ABC---1

ABC/: CMakeLists.txt  complex_number.c  complex_number.h  container.c  container.h  fraction_number.c  fraction_number.h  main.c  number.c  number.h  polar_number.c  polar_number.h  ПОЯСНИТЕЛЬНАЯ ЗАПИСКА.docx
ABC-OO/: CMakeLists.txt  complex_number.cpp  complex_number.h  container.cpp  container.h  fraction_number.cpp  fraction_number.h  main.cpp  number.cpp  number.h  polar_number.cpp  polar_number.h  randGenerator.h  ПОЯСНИТЕЛЬНАЯ ЗАПИСКА.docx
ABC-OO/outputs/: output1.1.txt  output1.2.txt  output2.1.txt  output2.2.txt  output3.1.txt  output3.2.txt  output4.1.txt  output4.2.txt  output5.1.txt  output5.2.txt  output7.1.txt  output7.2.txt  output8.1 (тест с рандомом, n = 12).txt  output8.2 (тест с рандомом, n = 12).txt
ABC-OO/tests/: input1.txt  input2.txt  input3.txt  input5.txt
